collapsed issue info to the left

--- a/media/css/oi/default/edit.css
+++ b/media/css/oi/default/edit.css
@@ -139,7 +139,7 @@ span.story_edit {
 
 div.issue_short {
     margin-bottom: 1em;
-    float: right;
+    float: left;
 }
 
 div.issue_short dl {
